# spark-demo

./: .gitignore  INTRODUCTION.md  PRACTISE.MD  README.md  TROUBLESHOOTING.md  Tiltfile  pyproject.toml
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/models/: revenue_per_day.sql  schema.yml  stg_orders.sql
dbt/models/bronze/: raw_orders.sql
dbt/models/gold/: orders_incremental.sql  top_customers.sql
dbt/models/silver/: stg_orders.sql
dbt/seeds/: orders.csv
dbt/tests/: assert_positive_amount.sql
docs/: architecture.md  spark-connect.md  spark-master.md  spark-thrift.md  spark-worker.md
notebooks/: 01_connect_spark.ipynb  01_hello_spark.ipynb  02_thrift_spark.ipynb  README.md
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py
spark/: README.md  spark-defaults.conf
